# photo-organizer

./: ARCHITECTURE.md  BACKLOG.md  README.md  REQUIREMENTS.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
gallery-server/: .env.example  .gitignore  Dockerfile  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
gallery-server/src/: admin.ts  index.ts  public.ts  storage.ts  types.ts  util.ts
gallery-worker/: CLOUDFLARE.md  SETUP.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts  wrangler.toml
gallery-worker/src/: admin-html.ts  admin.ts  html.test.ts  html.ts  index.ts  public.ts  types.ts  util.ts  zip.test.ts  zip.ts
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: exif.rs  fileops.rs  folder.rs  gallery.rs  mod.rs  orientation.rs  search.rs  settings.rs  sidecar.rs  thumbnail.rs
src-tauri/src/core/: app_settings.rs  exif.rs  fileops.rs  gallery_client.rs  gallery_store.rs  index_cache.rs  mod.rs  orientation.rs  phash.rs  preview_cache.rs  scanner.rs  sidecar.rs  thumbnail.rs
src-tauri/src/models/: bundle.rs  gallery.rs  mod.rs  settings.rs  sidecar.rs
src/components/: BundleTile.tsx  CheatsheetOverlay.tsx  DetailPanel.tsx  GalleriesDialog.tsx  PostsSection.tsx  PreviewPane.tsx  SearchDialog.tsx  SettingsDialog.tsx  ShareDialog.tsx  TagsSection.tsx  ThumbnailGrid.tsx  WelcomeDialog.tsx
src/types/: bundle.ts  exif.ts  gallery.ts  preview.ts  search.ts  settings.ts  sidecar.ts  thumb.ts
src/utils/: filter.test.ts  filter.ts  flagPatch.ts  format.ts  path.ts  preview.test.ts  preview.ts  selection.ts  shortcuts.test.ts  shortcuts.ts  tags.test.ts  tags.ts  url.ts
