[package]
name = "photo-organizer"
version = "0.1.0"
description = "Portrait shoot photo organizer"
authors = ["you"]
edition = "2021"

[lib]
name = "photo_organizer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
webp = "0.3"
kamadak-exif = "0.6"
trash = "5"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "macros"] }
