[package]
name = "cullback"
version = "0.1.0"
description = "Cullback — portrait shoot culling app with model feedback loop"
authors = ["you"]
edition = "2021"

[lib]
name = "cullback_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ulid = { version = "1", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
thiserror = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "tiff"] }
webp = "0.3"
kamadak-exif = "0.6"
# Embedded preview extraction from camera RAW files (ARW/CR2/CR3/NEF/DNG/RAF/ORF
# and many more). We use it only for `Decoder::thumbnail_image` / `preview_image`
# — fast path that yields the camera-embedded JPEG preview as a DynamicImage,
# avoiding full RAW demosaicing for thumbnails.
rawler = { version = "0.7", default-features = false }
trash = "5"
rayon = "1"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
tokio = { version = "1", features = ["fs", "rt", "rt-multi-thread", "macros"] }
